--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,6 @@ dependencies {
     compile 'org.neo4j:neo4j:2.1.5'
     compile 'com.google.guava:guava:18.0'
     compile 'com.xlson.groovycsv:groovycsv:1.0'
-    compile 'log4j:log4j:1.2.17'
+    compile 'org.apache.logging.log4j:log4j-core:2.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
