--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'groovy'
+apply plugin: 'java'
 apply plugin: 'idea'
 
 version = '1.0'
@@ -7,11 +8,33 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        groovy {
+            // override the default locations, rather than adding additional ones
+            srcDirs = ['src/groovy', 'src/java']
+        }
+        java {
+            srcDirs = [] // don't compile Java code twice
+        }
+    }
+    test {
+        groovy {
+            // override the default locations, rather than adding additional ones
+            srcDirs = ['src/groovy', 'src/java']
+        }
+        java {
+            srcDirs = [] // don't compile Java code twice
+        }
+    }
+}
+
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.7'
     compile 'org.neo4j:neo4j:2.1.5'
     compile 'com.google.guava:guava:18.0'
     compile 'com.xlson.groovycsv:groovycsv:1.0'
     compile 'org.apache.logging.log4j:log4j-core:2.1'
+    compile 'org.mongodb:mongo-java-driver:2.12.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
