--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.xlson.groovycsv:groovycsv:1.0'
     compile 'org.apache.logging.log4j:log4j-core:2.1'
     compile 'org.mongodb:mongo-java-driver:2.12.4'
+    compile 'com.google.guava:guava:18.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
