--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ sourceSets {
 }
 
 dependencies {
+    compile 'commons-cli:commons-cli:1.2'
     compile 'org.codehaus.groovy:groovy-all:2.3.7'
     compile 'org.neo4j:neo4j:2.1.5'
     compile 'com.google.guava:guava:18.0'
